# canoe

./: .gitignore  Cargo.toml  README.md  client.go  crypto.go  go.mod  go.sum  messages.go  server.go  udp_client.go  udp_server.go  unix.go  windows.go
example/client/: client_private.pem  client_private.pem.pub  client_public.pem  main.go
example/server/: main.go  server_private.pem  server_private.pem.pub  server_public.pem
src/: client.rs  handshake.rs  keygen.rs  main.rs
