[package]
name = "canoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
home = "0.5.5"
pem = "2.0.1"
pqc_kyber = { version="0.6.0", features=["std", "kyber1024"] }
rand = "0.8.5"
